@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class DomainValidationException extends RuntimeException {
     private final List<String> errors;
@@ -17,9 +16,10 @@ public class DomainValidationException extends RuntimeException {
     }
 
     public DomainValidationException(List<String> errors) {
-        super(String.join("; ", errors.stream()
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList())));
+        super(String.join("; ",
+                errors.stream()
+                        .filter(Objects::nonNull)
+                        .toList()));
         this.errors = Collections.unmodifiableList(new ArrayList<>(errors));
     }
 
